# CamForge

./: .editorconfig  .env.development  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: docker.yml  release.yml  test.yml
crates/camforge-core/: Cargo.toml
crates/camforge-core/benches/: simulation_bench.rs
crates/camforge-core/src/: full_motion.rs  geometry.rs  lib.rs  motion.rs  profile.rs  simulation.rs  types.rs
crates/camforge-server/: Cargo.toml
docs/: ALGORITHMS.md  ARCHITECTURE.md  CamForge-Next-review-v0.3.4-20260425.md  DEPLOYMENT.md  REFACTORING_PLAN.md  Review.md  TESTING.md  TODO.md  USER_GUIDE.md  WEB_OPTIMIZATION.md
docs/ADR/: ADR-001-solidjs-framework.md  ADR-002-tauri-v2-desktop.md  ADR-003-camforge-core-shared-crate.md
e2e/: smoke.spec.ts
public/: manifest.json  splash.css  splash.js
public/fonts/: fonts.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: http.ts  index.ts  tauri.ts
src/components/: ErrorBoundary.tsx
src/constants/: cam.ts  chartColors.ts  display.ts  index.ts  motionLaws.ts  numeric.ts
src/exporters/: csv.ts  dxf.ts  excel.ts  index.ts  tiff.ts
src/hooks/: useChartInteraction.ts  useChartPadding.ts
src/i18n/: index.ts  translations.ts
(+99 files in other folders)
