[package]
name = "camforge-core"
version.workspace = true
description = "CamForge - Core computation engine for cam mechanism kinematics"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Numerical computing
ndarray = "0.15"
num-traits = "0.2"

# Parallel computing
rayon = "1.8"

# Error handling
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"

[features]
default = []
