[package]
name = "camforge-core"
version.workspace = true
description = "CamForge - Core computation engine for cam mechanism kinematics"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }

# OpenAPI schema (optional, enabled by server)
utoipa = { version = "4", optional = true }

[dev-dependencies]
approx = "0.5"
serde_json = "1"
criterion = "0.5"

[[bench]]
name = "simulation_bench"
harness = false

[features]
default = []
openapi = ["utoipa"]
